refactor: dockerized ui and backend.